versions/0.8.0/_sources/reference.rst.txt
.. Copyright 2010-2018 Amazon.com, Inc. or its affiliates. All Rights Reserved.

   This work is licensed under a Creative Commons Attribution-NonCommercial-ShareAlike 4.0
   International License (the "License"). You may not use this file except in compliance with the
   License. A copy of the License is located at http://creativecommons.org/licenses/by-nc-sa/4.0/.

   This file is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
   either express or implied. See the License for the specific language governing permissions and
   limitations under the License.

.. _reference:

#########
Reference
#########

.. toctree::
   :maxdepth: 1

   refs/_aws-cdk_assets
   refs/_aws-cdk_aws-apigateway
   refs/_aws-cdk_aws-applicationautoscaling
   refs/_aws-cdk_aws-appsync
   refs/_aws-cdk_aws-athena
   refs/_aws-cdk_aws-autoscaling
   refs/_aws-cdk_aws-autoscalingplans
   refs/_aws-cdk_aws-batch
   refs/_aws-cdk_aws-budgets
   refs/_aws-cdk_aws-certificatemanager
   refs/_aws-cdk_aws-cloud9
   refs/_aws-cdk_aws-cloudformation
   refs/_aws-cdk_aws-cloudfront
   refs/_aws-cdk_aws-cloudtrail
   refs/_aws-cdk_aws-cloudwatch
   refs/_aws-cdk_aws-codebuild
   refs/_aws-cdk_aws-codecommit
   refs/_aws-cdk_aws-codedeploy
   refs/_aws-cdk_aws-codepipeline
   refs/_aws-cdk_aws-cognito
   refs/_aws-cdk_aws-config
   refs/_aws-cdk_aws-custom-resources
   refs/_aws-cdk_aws-datapipeline
   refs/_aws-cdk_aws-dax
   refs/_aws-cdk_aws-directoryservice
   refs/_aws-cdk_aws-dms
   refs/_aws-cdk_aws-dynamodb
   refs/_aws-cdk_aws-ec2
   refs/_aws-cdk_aws-ecr
   refs/_aws-cdk_aws-ecs
   refs/_aws-cdk_aws-efs
   refs/_aws-cdk_aws-eks
   refs/_aws-cdk_aws-elasticache
   refs/_aws-cdk_aws-elasticbeanstalk
   refs/_aws-cdk_aws-elasticloadbalancing
   refs/_aws-cdk_aws-elasticloadbalancingv2
   refs/_aws-cdk_aws-elasticsearch
   refs/_aws-cdk_aws-emr
   refs/_aws-cdk_aws-events
   refs/_aws-cdk_aws-gamelift
   refs/_aws-cdk_aws-glue
   refs/_aws-cdk_aws-guardduty
   refs/_aws-cdk_aws-iam
   refs/_aws-cdk_aws-inspector
   refs/_aws-cdk_aws-iot
   refs/_aws-cdk_aws-kinesis
   refs/_aws-cdk_aws-kinesisanalytics
   refs/_aws-cdk_aws-kinesisfirehose
   refs/_aws-cdk_aws-kms
   refs/_aws-cdk_aws-lambda
   refs/_aws-cdk_aws-logs
   refs/_aws-cdk_aws-neptune
   refs/_aws-cdk_aws-opsworks
   refs/_aws-cdk_aws-rds
   refs/_aws-cdk_aws-redshift
   refs/_aws-cdk_aws-route53
   refs/_aws-cdk_aws-s3
   refs/_aws-cdk_aws-sdb
   refs/_aws-cdk_aws-serverless
   refs/_aws-cdk_aws-servicecatalog
   refs/_aws-cdk_aws-servicediscovery
   refs/_aws-cdk_aws-ses
   refs/_aws-cdk_aws-sns
   refs/_aws-cdk_aws-sqs
   refs/_aws-cdk_aws-ssm
   refs/_aws-cdk_aws-stepfunctions
   refs/_aws-cdk_aws-waf
   refs/_aws-cdk_aws-wafregional
   refs/_aws-cdk_aws-workspaces
   refs/_aws-cdk_cdk
   refs/_aws-cdk_cx-api
   refs/_aws-cdk_rtv
